implement users microservice

--- a/infrastructure/Dockerfile.challenges
+++ b/infrastructure/Dockerfile.challenges
@@ -5,6 +5,8 @@ WORKDIR /app
 COPY . .
 RUN pip install --no-cache-dir -r requirements.txt
 
+ENV DB_HOST="db_mysql"
+
 EXPOSE 8000
 
 CMD python3 -m uvicorn http_server:app --host 0.0.0.0 --port 8000
