add frontend to docker

--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -32,5 +32,14 @@ services:
     ports:
       - 8000:8000
 
+  frontend: # Server for fully client side ReactJS application
+    build:
+      context: ../frontend
+      dockerfile: ../infrastructure/Dockerfile.frontend
+    volumes:
+      - ../frontend:/app
+    ports:
+      - 80:5173
+
 volumes:
   db_mysql:
