--- a/infrastructure/Dockerfile.challenges
+++ b/infrastructure/Dockerfile.challenges
@@ -9,4 +9,4 @@ ENV DB_HOST="db_mysql"
 
 EXPOSE 8000
 
-CMD python3 -m uvicorn http_server:app --host 0.0.0.0 --port 8000
+CMD python3 -m uvicorn http_server:app --host 0.0.0.0 --port 8000 --reload
