--- a/infrastructure/Dockerfile.frontend
+++ b/infrastructure/Dockerfile.frontend
@@ -8,7 +8,8 @@ WORKDIR /app
 COPY . .
 
 # Install dependencies
-RUN npm install
+ARG CACHEBUST=1
+RUN npm install --verbose
 
 # Build the project
 RUN npm run build
