--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -38,6 +38,7 @@ services:
       dockerfile: ../infrastructure/Dockerfile.frontend
     volumes:
       - ../frontend:/app
+      - /app/node_modules
     ports:
       - 80:5173
 
