--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.db
+    ports: # expose databse ports - ONLY DO THIS IN DEV ENV
+      - 3306:3306
     volumes:
       - db_mysql:/var/lib/mysql
 
