--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,11 @@ jobs:
     - name: Wait for services to be up
       run: sleep 20
 
+    - name: Install dependencies
+      run: |
+        cd backend/challenges_microservice
+        pip install -r requirements.txt
+
     - name: Run tests
       run: |
         cd backend/challenges_microservice
