--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,6 @@ on:
     branches:
       - main
 
-
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -25,7 +24,17 @@ jobs:
         cd infrastructure
         docker compose up --build -d
 
-    - name: Install Dependencies
+    - name: Install Users Microservice Dependencies
+      run: |
+        cd backend/users_microservice
+        pip install -r requirements.txt
+
+    - name: Run Users Microservice Tests
+      run: |
+        cd backend/users_microservice
+        python3 -m pytest
+
+    - name: Install Challenges Microservice Dependencies
       run: |
         cd backend/challenges_microservice
         pip install -r requirements.txt
